Jump top link fix

--- a/style.css
+++ b/style.css
@@ -1089,5 +1089,7 @@ main footer {
 }
 
 .jump-top {
+  display: inline-block;
   font-size: 1.8rem;
+  margin-bottom: 1.4rem;
 }
